Initial SCPI framework for characterization board

--- a/firmware/BLONDEL/afe-characterization/Makefile
+++ b/firmware/BLONDEL/afe-characterization/Makefile
@@ -1,5 +1,5 @@
 CFLAGS=-g -mcpu=cortex-m0
-CXXFLAGS=$(CFLAGS) --std=c++17 -fno-exceptions -fno-rtti -g
+CXXFLAGS=$(CFLAGS) --std=c++17 -fno-exceptions -fno-rtti -g --specs=nano.specs
 CC=arm-none-eabi-gcc
 CXX=arm-none-eabi-g++
 all:
