--- a/firmware/BLONDEL/afe-characterization/Makefile
+++ b/firmware/BLONDEL/afe-characterization/Makefile
@@ -1,10 +1,15 @@
 CFLAGS=-g -mcpu=cortex-m0
-CXXFLAGS=$(CFLAGS) --std=c++17 -fno-exceptions -fno-rtti -g --specs=nano.specs
+CXXFLAGS=$(CFLAGS) --std=c++17 -fno-exceptions -fno-rtti -g --specs=nano.specs \
+	-I../../stm32-cpp/devices/inc/ \
+	-I../../stm32-cpp/src/
 CC=arm-none-eabi-gcc
 CXX=arm-none-eabi-g++
 all:
 	$(CC) *.S -c $(CFLAGS)
 	$(CXX) *.cpp -c $(CXXFLAGS)
-	$(CXX) $(CXXFLAGS) *.o -Wl,-T stm32f031.ld -o firmware.elf
+#	$(CXX) ../../stm32-cpp/src/util/*.cpp -c $(CXXFLAGS)
+	$(CXX) ../../stm32-cpp/src/peripheral/*.cpp -c $(CXXFLAGS)
+	$(CXX) ../../stm32-cpp/devices/src/stm32f031.cpp -c $(CXXFLAGS)
+	$(CXX) $(CXXFLAGS) *.o -Wl,-T ../../stm32-cpp/devices/link/stm32f031.ld -o firmware.elf
 	arm-none-eabi-objcopy -O binary --only-section=.text --only-section=.data firmware.elf firmware.bin
 	./imagesize.sh
