Continued work on SCPI parsing, integrated LTC2664 driver for offset control

--- a/firmware/BLONDEL/afe-characterization/Makefile
+++ b/firmware/BLONDEL/afe-characterization/Makefile
@@ -1,4 +1,4 @@
-CFLAGS=-g -mcpu=cortex-m0 -DSTM32F031
+CFLAGS=-g -mcpu=cortex-m0 -DSTM32F031 -Os
 CXXFLAGS=$(CFLAGS) --std=c++17 -fno-exceptions -fno-rtti -g --specs=nano.specs \
 	-I../../stm32-cpp/devices/inc/ \
 	-I../../stm32-cpp/src/
