LCD now includes thermal readings for debugging, and includes initial channel name text

--- a/firmware/MEAD/Makefile
+++ b/firmware/MEAD/Makefile
@@ -9,7 +9,7 @@ all:
 	$(CC) ../stm32-cpp/src/cpu/*.S -c $(CFLAGS)
 	$(CXX) ../stm32-cpp/src/newlib-stubs/*.cpp -c $(CXXFLAGS)
 	$(CXX) ../stm32-cpp/src/peripheral/*.cpp -c $(CXXFLAGS)
-	#	$(CXX) ../stm32-cpp/src/util/*.cpp -c $(CXXFLAGS)
+	$(CXX) ../stm32-cpp/src/util/*.cpp -c $(CXXFLAGS)
 	$(CXX) ../stm32-cpp/devices/src/stm32f031.cpp -c $(CXXFLAGS)
 	$(CXX) $(CXXFLAGS) *.o -Wl,-T ../stm32-cpp/devices/link/stm32f031.ld -o firmware.elf
 	arm-none-eabi-objcopy -O binary --only-section=.text --only-section=.data firmware.elf firmware.bin
